--- a/server/garbage-sorting/src/main/resources/application.yml
+++ b/server/garbage-sorting/src/main/resources/application.yml
@@ -25,7 +25,10 @@ spring:
     url: jdbc:mysql://rm-bp13l746k96nizze6qo.mysql.rds.aliyuncs.com:3306/garbage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: fitness
     password: fitness_2022
-
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 
 mybatis-plus:
   configuration:
