--- a/server/garbage-sorting/src/main/resources/application.yml
+++ b/server/garbage-sorting/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 garbage:
-  clientId: 8O6iDRorKU3bZEhSYyOs1QLe
-  clientSecret: YpjD0PjuD61DQVBSjFeRy7grbYZMKdBe
+  clientId: ""
+  clientSecret: ""
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为8080
@@ -25,8 +25,8 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://rm-bp13l746k96nizze6qo.mysql.rds.aliyuncs.com:3306/garbage?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-    username: fitness
-    password: fitness_2022
+    username: root
+    password:
   servlet:
     multipart:
       max-file-size: 50MB
